# cnpy

./: .gitignore  CMakeLists.txt
test/: critic.py  gen.cpp
